[tool.poetry]
name = "melbo"
version = "0.1.0"
description = ""
authors = ["Ivan Yastrebov <esim.i2p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
configparser = "^5.2.0"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
